Fix top navigation bar on small phones

--- a/Leatha.Portfolio.Blazor.WebAssembly/Styles/responsive.scss
+++ b/Leatha.Portfolio.Blazor.WebAssembly/Styles/responsive.scss
@@ -247,6 +247,23 @@
     }
 }
 
+/* Special Case */
+@media (max-width: 500px) {
+    .language-dropdown {
+        button {
+            padding: 0.25rem;
+        }
+    }
+
+    .top-nav {
+        gap: 0.25rem;
+
+        .nav-link {
+            padding: 0.25rem;
+        }
+    }
+}
+
 /* Ultra-small devices (≤360px) */
 @media (max-width: 360px) {
 
